// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`store > can add entities to a parent entity 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        },
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can add entities to a parent entity at a specific index 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        },
        "inputs": {},
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can add entities to root 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    },
  },
}
`;

exports[`store > can add entities to root at specific index 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can be created with a non-empty schema 1`] = `
[MockFunction validateSchemaIntegrity] {
  "calls": [
    [
      {
        "childrenAllowed": {},
        "entities": [
          {
            "defaultValue": [Function],
            "inputs": [
              {
                "defaultValue": [Function],
                "name": "label",
                "validate": [Function],
              },
            ],
            "isValueAllowed": false,
            "name": "text",
            "shouldBeProcessed": [Function],
            "validate": [Function],
          },
        ],
        "entityId": {
          "generate": [Function],
          "validate": [Function],
        },
        "parentRequired": [],
      },
      {
        "entities": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": {
            "inputs": {
              "label": "test",
            },
            "type": "text",
          },
        },
        "root": [
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "data": {
          "entities": {
            "6e0035c3-0d4c-445f-a42b-2d971225447c": {
              "inputs": {
                "label": "test",
              },
              "type": "text",
            },
          },
          "root": [
            "6e0035c3-0d4c-445f-a42b-2d971225447c",
          ],
        },
        "success": true,
      },
    },
  ],
}
`;

exports[`store > can be created with a non-empty schema 2`] = `
{
  "addEntity": [Function],
  "builder": {
    "childrenAllowed": {},
    "entities": [
      {
        "defaultValue": [Function],
        "inputs": [
          {
            "defaultValue": [Function],
            "name": "label",
            "validate": [Function],
          },
        ],
        "isValueAllowed": false,
        "name": "text",
        "shouldBeProcessed": [Function],
        "validate": [Function],
      },
    ],
    "entityId": {
      "generate": [Function],
      "validate": [Function],
    },
    "parentRequired": [],
  },
  "deleteEntity": [Function],
  "getData": [Function],
  "getSerializedSchema": [Function],
  "resetEntitiesInputsErrors": [Function],
  "resetEntityInputError": [Function],
  "resetEntityInputsErrors": [Function],
  "setActiveEntityId": [Function],
  "setEntitiesInputsErrors": [Function],
  "setEntityInputError": [Function],
  "setEntityInputsErrors": [Function],
  "subscribe": [Function],
  "subscribeToEvents": [Function],
  "updateEntity": [Function],
  "updateEntityInput": [Function],
  "validateEntitiesInputs": [Function],
  "validateEntityInput": [Function],
  "validateEntityInputs": [Function],
}
`;

exports[`store > can be created with an empty schema 1`] = `
[MockFunction validateSchemaIntegrity] {
  "calls": [
    [
      {
        "childrenAllowed": {},
        "entities": [],
        "entityId": {
          "generate": [Function],
          "validate": [Function],
        },
        "parentRequired": [],
      },
      {
        "entities": {},
        "root": [],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "data": {
          "entities": {},
          "root": [],
        },
        "success": true,
      },
    },
  ],
}
`;

exports[`store > can be created with an empty schema 2`] = `
{
  "addEntity": [Function],
  "builder": {
    "childrenAllowed": {},
    "entities": [],
    "entityId": {
      "generate": [Function],
      "validate": [Function],
    },
    "parentRequired": [],
  },
  "deleteEntity": [Function],
  "getData": [Function],
  "getSerializedSchema": [Function],
  "resetEntitiesInputsErrors": [Function],
  "resetEntityInputError": [Function],
  "resetEntityInputsErrors": [Function],
  "setActiveEntityId": [Function],
  "setEntitiesInputsErrors": [Function],
  "setEntityInputError": [Function],
  "setEntityInputsErrors": [Function],
  "subscribe": [Function],
  "subscribeToEvents": [Function],
  "updateEntity": [Function],
  "updateEntityInput": [Function],
  "validateEntitiesInputs": [Function],
  "validateEntityInput": [Function],
  "validateEntityInputs": [Function],
}
`;

exports[`store > can be created without a schema 1`] = `
{
  "addEntity": [Function],
  "builder": {
    "childrenAllowed": {},
    "entities": [],
    "entityId": {
      "generate": [Function],
      "validate": [Function],
    },
    "parentRequired": [],
  },
  "deleteEntity": [Function],
  "getData": [Function],
  "getSerializedSchema": [Function],
  "resetEntitiesInputsErrors": [Function],
  "resetEntityInputError": [Function],
  "resetEntityInputsErrors": [Function],
  "setActiveEntityId": [Function],
  "setEntitiesInputsErrors": [Function],
  "setEntityInputError": [Function],
  "setEntityInputsErrors": [Function],
  "subscribe": [Function],
  "subscribeToEvents": [Function],
  "updateEntity": [Function],
  "updateEntityInput": [Function],
  "validateEntitiesInputs": [Function],
  "validateEntityInput": [Function],
  "validateEntityInputs": [Function],
}
`;

exports[`store > can delete entities and cascade delete their children 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "49e91328-02bc-4daa-ab56-619554e85cff" => {
        "children": Set {},
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "49e91328-02bc-4daa-ab56-619554e85cff",
    },
  },
}
`;

exports[`store > can move an entity from root to a parent entity 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
        },
        "inputs": {},
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can move an entity from root to a parent entity at a specific index 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        },
        "inputs": {},
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can move an entity in a parent entity 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {
          "6e0035c3-0d4c-445f-a42b-2d971225447c",
          "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5",
        },
        "inputs": {},
        "type": "test",
      },
      "a02cd91c-d982-4e80-8fa4-184e9fe2b0b5" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can move an entity in root 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can move an entity in root 2`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    },
  },
}
`;

exports[`store > can move an entity in root 3`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    },
  },
}
`;

exports[`store > can move an entity to root 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {},
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "51324b32-adc3-4d17-a90e-66b5453935bd",
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    },
  },
}
`;

exports[`store > can move an entity to root at a specific index 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "children": Set {},
        "inputs": {},
        "type": "test",
      },
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can retrieve the data 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {
          "label": "test",
        },
        "type": "text",
      },
    },
    "root": Set {
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    },
  },
}
`;

exports[`store > can return the schema 1`] = `
{
  "entities": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": {
      "inputs": {
        "label": "test",
      },
      "type": "text",
    },
  },
  "root": [
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  ],
}
`;

exports[`store > can set a reset a single entity input error 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "label error",
    "title": "title error",
  },
}
`;

exports[`store > can set a reset a single entity input error 2`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "title": "title error",
  },
}
`;

exports[`store > can set a reset a single entity input error 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can set a reset a single entity input error 4`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store > can set a reset all inputs errors for a all entities 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "label error",
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "title": "title error",
  },
}
`;

exports[`store > can set a reset all inputs errors for a all entities 2`] = `Map {}`;

exports[`store > can set a reset all inputs errors for a single entity 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "label error",
    "title": "title error",
  },
}
`;

exports[`store > can set a reset all inputs errors for a single entity 2`] = `Map {}`;

exports[`store > can set a reset all inputs errors for a single entity 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can set a single entity input error 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "Some error",
    "title": "Title error",
  },
}
`;

exports[`store > can set a single entity input error 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can set a single entity input error 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store > can set inputs errors for a all entities 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "some error",
    "title": "another error",
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": "some error",
    "title": "another error",
  },
}
`;

exports[`store > can set inputs errors for a all entities 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can set inputs errors for a all entities 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store > can set inputs errors for a all entities 4`] = `Map {}`;

exports[`store > can set multiple input errors for a single entity 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": "some error",
    "title": "another error",
  },
}
`;

exports[`store > can set multiple input errors for a single entity 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can set multiple input errors for a single entity 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store > can set the active entity ID 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can update entity inputs 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {
          "label": "New label",
          "required": true,
        },
        "type": "select",
      },
      "51324b32-adc3-4d17-a90e-66b5453935bd" => {
        "inputs": {
          "maxLength": 1,
        },
        "type": "text",
      },
    },
    "root": Set {
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
      "51324b32-adc3-4d17-a90e-66b5453935bd",
    },
  },
}
`;

exports[`store > can validate a all inputs of a single entity 1`] = `
{
  "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
  "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
}
`;

exports[`store > can validate a all inputs of a single entity 2`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
  },
}
`;

exports[`store > can validate a all inputs of a single entity 3`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can validate a all inputs of all entities 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    "maxLength": undefined,
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": undefined,
    "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
  },
}
`;

exports[`store > can validate a all inputs of all entities 2`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
    "maxLength": undefined,
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": undefined,
    "maxLength": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "number",
    "received": "string",
    "path": [],
    "message": "Expected number, received string"
  }
]],
  },
}
`;

exports[`store > can validate a single entity input 1`] = `
Map {
  "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [],
    "message": "Expected string, received number"
  }
]],
  },
  "51324b32-adc3-4d17-a90e-66b5453935bd" => {
    "label": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
  },
}
`;

exports[`store > can validate a single entity input 2`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > can validate a single entity input 3`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store > doesn't update the entity when no mutation fields were provided 1`] = `
{
  "activeEntityId": null,
  "entitiesInputsErrors": Map {},
  "schema": {
    "entities": Map {
      "6e0035c3-0d4c-445f-a42b-2d971225447c" => {
        "inputs": {},
        "type": "test",
      },
    },
    "root": Set {
      "6e0035c3-0d4c-445f-a42b-2d971225447c",
    },
  },
}
`;

exports[`store > throws when adding an entity with a non-existent input 1`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store > throws when adding an entity with an already existent ID 1`] = `"An entitiy with the ID \\"6e0035c3-0d4c-445f-a42b-2d971225447c\\" already exists."`;

exports[`store > throws when trying to add an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > throws when trying to delete non existent entity 1`] = `"Entity with ID \\"test\\" was not found."`;

exports[`store > throws when trying to move an entity to a non existent parent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > throws when trying to update a non existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > throws when updating an input of a non-existent entity 1`] = `"Entity with ID \\"invalid\\" was not found."`;

exports[`store > throws when updating an non-existent input of an entity 1`] = `"Unkown entity input \\"invalid\\"."`;

exports[`store events system > dispatches events to listeners on mutations 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "name": "EntityAdded",
        "payload": {
          "entity": {
            "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "inputs": {},
            "type": "test",
          },
          "meta": undefined,
        },
      },
    ],
    [
      {
        "name": "EntityUpdated",
        "payload": {
          "entity": {
            "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "inputs": {},
            "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "type": "test",
          },
          "meta": {
            "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      },
    ],
    [
      {
        "name": "EntityDeleted",
        "payload": {
          "entity": {
            "id": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "inputs": {},
            "parentId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "type": "test",
          },
        },
      },
    ],
    [
      {
        "name": "EntityDeleted",
        "payload": {
          "entity": {
            "children": Set {},
            "id": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "inputs": {},
            "type": "test",
          },
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
